--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,6 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        renderscriptTargetApi 24
-        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -32,4 +30,6 @@ dependencies {
     compile 'commons-io:commons-io:+'
     compile 'com.android.support:design:24.1.1'
     compile project(':waveformDisplay')
+
+    compile 'com.github.wendykierp:JTransforms:3.0'
 }
